Change the website title from VRUniverse to Hydra

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       href="./src/assets/images/Hydra.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VRUniverse</title>
+    <title>Hydra</title>
   </head>
   <body>
     <div id="root"></div>
